# kkrooo

./: .gitignore  GOALS.TXT  LICENSE  README.md
3rd/FreeImage/Source/: MapIntrospector.h
3rd/FreeImage/Source/LibOpenJPEG/: cidx_manager.c  openjpeg.c  opj_config_private.h  phix_manager.c  ppix_manager.c  thix_manager.c
3rd/assimp/code/Common/: Exporter.cpp  revision.h
3rd/assimp/code/OpenGEX/: OpenGEXImporter.cpp
3rd/krgui/: KrGui.h  KrGuiButton.cpp  KrGuiFont.cpp  KrGuiGroup.cpp  KrGuiMenuBar.cpp  KrGuiNodeEditor.cpp  KrGuiPopupMenu.cpp  KrGuiRangeSlider.cpp  KrGuiStyle.h  KrGuiText.cpp  KrGuiTextInput.cpp  KrGuiValueSelector.cpp  KrGui_string.h  krGui.cpp  krGuiOpenGL.cpp
bin64/: run.bat
inc/: PluginSDK.h  kkrooo.engine.h
inc/Classes/: kkAABB.h  kkColor.h  kkOBB.h
inc/Classes/Common/: kkAllocator.h  kkBaseObject.h  kkPtr.h  kkRefObject.h
inc/Classes/Containers/: kkArray.h  kkList.h  kkPair.h
inc/Classes/Math/: kkMath.h  kkMatrix.h  kkQuaternion.h  kkRay.h  kkVector4.h
inc/Classes/Patterns/: kkSingleton.h
inc/Classes/Strings/: kkString.h
inc/Common/: kkConfig.h  kkEasyFunctions.h  kkError.h  kkForward.h  kkInfo.h  kkInfoSharedLibrary.h  kkTypes.h  kkUtil.h
inc/Events/: kkEvent.h  kkEventSystem.h
inc/FileSystem/: kkFileSystem.h  kkXMLDocument.h
inc/Geometry/: kkGeometryCreator.h  kkPolygon.h  kkPolygonalModel.h  kkVertex.h
inc/GraphicsSystem/: kkGraphicsSystem.h  kkMesh.h  kkShader.h  kkTexture.h
inc/Input/: kkInputKey.h  kkInputSystem.h
inc/MainSystem/: kkMainSystem.h
inc/Material/: kkMaterial.h
inc/Memory/: kkMemory.h
inc/Plugins/: kkPlugin.h  kkPluginCommonInterface.h  kkPluginGUI.h  kkPluginID.h  kkPluginObjectCategory.h
inc/Renderer/: kkRenderer.h
inc/Scene3D/: kkScene3D.h  kkScene3DObject.h
inc/SceneSystem/: kkCamera.h  kkDummy.h  kkSceneObject.h  kkSceneSystem.h
inc/Window/: kkWindow.h
plugins/: plugins.sln
plugins/AI_3ds/: AI_3ds.vcxproj  CMakeCache.txt  CMakeLists.txt  Makefile  common.h  import.cpp  main.cpp
plugins/FI_bmp/: FI_bmp.vcxproj  import.cpp  main.cpp
plugins/FI_dds/: FI_dds.vcxproj  import.cpp  main.cpp
plugins/FI_gif/: FI_gif.vcxproj  import.cpp  main.cpp
plugins/FI_jpg/: FI_jpg.vcxproj  import.cpp  main.cpp
plugins/FI_tga/: FI_tga.vcxproj  import.cpp  main.cpp
plugins/FI_tiff/: FI_tiff.vcxproj  import.cpp  main.cpp
plugins/FreeImage/: FreeImage.vcxproj  FreeImage.vcxproj.filters
plugins/assimp/: assimp.vcxproj  assimp.vcxproj.filters
plugins/png/: CMakeCache.txt  CMakeLists.txt  Makefile  import.cpp  main.cpp  png.vcxproj
res/gui/: microFont.pdn  smallFont.pdn
res/keys/: default.xml
src/app/: AppEvent.h  Application.cpp  Application.h  ApplicationState.h  Application_editParamsWindow_onActivate.cpp  CMakeLists.txt  Common.h  CursorRay.h  EventConsumer.cpp  EventConsumer.h  Fonts.cpp  Forward.h  Functions.cpp  Functions.h  Gizmo.cpp  Gizmo.h  Makefile  SelectionFrust.h  ShortcutManager.cpp  ShortcutManager.h  kkrooo.exe.stackdump  log.cpp  main_app.cpp  window_callbacks.cpp  window_callbacks.h
src/app/GUI/: ColorTheme.h  DrawLeftToolBar.cpp  DrawRightPart.cpp  GUIResources.cpp  GUIResources.h  MainMenuBar.cpp  MainMenuCommands.cpp  MainMenuCommands.h  MainMenu_mainToolBar.cpp  MainMenu_objectCreatorCategories.cpp
src/app/Geometry/: GeometryCreator.cpp  GeometryCreator.h  Polygon3D.cpp  Polygon3D.h  PolygonalModel.cpp  PolygonalModel.h  Vertex.cpp  Vertex.h
src/app/Materials/: MaterialEditor.cpp  MaterialEditor.h  kkMaterialTypeImpl.cpp  kkMaterialTypeImpl.h
src/app/Plugins/: Plugin.cpp  Plugin.h  PluginCommonInterface.cpp  PluginCommonInterface.h  PluginGUI.cpp  PluginGUI.h  PluginGUIWindow.cpp  PluginGUIWindow.h  PluginManager.cpp  PluginManager.h  PluginObjectCategory.cpp  PluginObjectCategory.h
src/app/RenderManager/: RenderManager.cpp  RenderManager.h
src/app/Scene3D/: Scene3D.cpp  Scene3D.h  Scene3DObject.cpp  Scene3DObject.h  Scene3DObject_transform.cpp
src/app/Shaders/: ShaderScene3DObjectDefault_polymodeforlinerender.cpp  ShaderScene3DObjectDefault_polymodeforlinerender.h  linemodel.cpp  linemodel.h  points.cpp  points.h  scene3DobjectDefault.cpp  scene3DobjectDefault.h  scene3DobjectDefaultSilhouette.cpp  scene3DobjectDefaultSilhouette.h  simple.cpp  simple.h
src/app/Viewport/: Viewport.cpp  Viewport.h  ViewportCamera.cpp  ViewportCamera.h  ViewportCameraUpdateCallback.cpp  ViewportOptimizations.cpp  ViewportOptimizations.h
src/engine/: CMakeLists.txt  Makefile  kkEasyFunctionsImpl.cpp  main_kkrooo.cpp
src/engine/EventSystem/: kkEventSystemImpl.cpp  kkEventSystemImpl.h
src/engine/FileSystem/: kkFileSystemCommon.cpp  kkFileSystemCommon.h  kkFileSystemWin32.cpp  kkFileSystemWin32.h  kkFileWin32.cpp  kkFileWin32.h  kkXMLDocumentImpl.cpp  kkXMLDocumentImpl.h  kkXMLImpl.cpp
src/engine/GraphicsSystem/: kkGraphicsSystemImpl.cpp  kkGraphicsSystemImpl.h  kkOpenGL.cpp  kkOpenGL.h  kkOpenGLModel.cpp  kkOpenGLModel.h  kkOpenGLShader.cpp  kkOpenGLShader.h  kkOpenGLTexture.cpp  kkOpenGLTexture.h  kkOpenGLWin32.cpp  kkOpenGLWin32.h
src/engine/InputSystem/: kkInputSystemImpl.cpp  kkInputSystemImpl.h
src/engine/MainSystem/: kkMainSystemImpl.cpp  kkMainSystemImpl.h  kkMainSystemImpl_Win32.cpp
src/engine/Memory/: kkMemory.cpp  kkMemorySystemImpl.cpp  kkMemorySystemImpl.h
src/engine/SceneSystem/: kkCameraImpl.cpp  kkCameraImpl.h  kkSceneSystemImpl.cpp  kkSceneSystemImpl.h
src/engine/Window/: kkWindowWin32.cpp  kkWindowWin32.h  kkWindowWin32_loc.h
src/standartObjects/: CMakeCache.txt  CMakeLists.txt  Makefile  box.cpp  common.h  plane.cpp  standartObjects_main.cpp
src/standartRenderer/: CMakeCache.txt  CMakeLists.txt  Common.h  Makefile  MaterialDefault.cpp  MaterialDefault.h  ParameterBitmap.cpp  ParameterBitmap.h  ParameterColor.cpp  ParameterColor.h  Renderer.cpp  Renderer.h  standartRenderer_main.cpp
